# iRustio

./: .gitignore  Cargo.toml  Config.toml  Example Return file.yaml  README.md  cargo.toml
.github/workflows/: RPI.yaml  rust-clippy.yml  rust.yml
src/: api_utils.rs  backend.rs  config.rs  getters.rs  lib.rs  main.rs  metadata.rs  playing_traits.rs  query.rs  stations.txt  structs.rs  ui.rs
src/backend/: gstreamer.rs  mpv.rs
src/config/: statics.rs
