[package]
name = "iRustio"
version = "0.0.1"
edition = "2021"
authors = ["The Last CD"]

[dependencies]
mpv = "0.2.3" # For media playback
glib = "0.20.7"
gstreamer = "0.23.4"
gstreamer-base = "0.23.4"



futures =  "0.3.31"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
radiobrowser = "0.6.1"
chrono = "0.4"
icy-metadata = "0.2.0"
reqwest = "0.12.12"



